# wp-reactor

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.claude/skills/: cargo-check-all.md  commit.md  release-prep.md  rust-add-module.md  rust-add-test.md  rust-api-design.md  rust-async-patterns.md  rust-clippy-lints.md  rust-debug-error.md  rust-dependency-audit.md  rust-documentation.md  rust-error-handling.md  rust-logging.md  rust-performance.md  rust-refactor.md  rust-unsafe-review.md  update-changelog.md
_gal/: work.gxl
crates/wf-cli/: Cargo.toml
crates/wf-cli/src/: main.rs
crates/wf-config/: Cargo.toml
crates/wf-config/src/: alert.rs  fusion.rs  lib.rs  logging.rs  metrics.rs  project.rs  runtime.rs  server.rs  types.rs  validate.rs  window.rs
crates/wf-config/src/sink/: build.rs  connector.rs  defaults.rs  expect.rs  group.rs  io.rs  mod.rs  route.rs  types.rs  validate.rs
crates/wf-core/: Cargo.toml
crates/wf-core/src/: error.rs  lib.rs
crates/wf-core/src/alert/: mod.rs  sink.rs  types.rs
crates/wf-core/src/rule/: contract.rs  event_bridge.rs  executor.rs  match_engine.rs  mod.rs  tests.rs
crates/wf-core/src/rule/executor/: alert.rs  close_exec.rs  context.rs  eval.rs  match_exec.rs  mod.rs
crates/wf-core/src/rule/match_engine/: close.rs  conv.rs  eval.rs  key.rs  mod.rs  state.rs  step.rs  types.rs
crates/wf-core/src/rule/tests/: cep_core.rs  close.rs  contract.rs  executor.rs  helpers.rs  l2_features.rs  mod.rs  regression.rs
crates/wf-core/src/rule/tests/l2/: baseline.rs  execute.rs  expr.rs  fixed.rs  guards.rs  joins.rs  keymap.rs  limits.rs  mod.rs
crates/wf-core/src/rule/tests/l3/: conv.rs  mod.rs  session.rs
crates/wf-core/src/rule/tests/regression/: aggregation.rs  close.rs  guards.rs  mod.rs  threshold.rs
crates/wf-core/src/sink/: dispatch.rs  mod.rs  runtime.rs
crates/wf-core/src/window/: buffer.rs  evictor.rs  mod.rs  registry.rs  router.rs
crates/wf-core/src/window/buffer/: cursor.rs  eviction.rs  mod.rs  tests.rs  types.rs  watermark.rs
crates/wf-datagen/: Cargo.toml
crates/wf-datagen/src/: cmd_bench.rs  cmd_gen.rs  cmd_helpers.rs  cmd_lint.rs  cmd_verify.rs  lib.rs  loader.rs  main.rs  validate.rs  wfg_ast.rs  wsc_ast.rs
crates/wf-datagen/src/datagen/: fault_gen.rs  field_gen.rs  inject_gen.rs  mod.rs  stream_gen.rs  tests.rs
crates/wf-datagen/src/datagen/inject_gen/: extract.rs  helpers.rs  hit.rs  mod.rs  near_miss.rs  non_hit.rs  structures.rs
crates/wf-datagen/src/datagen/tests/: inject.rs  mod.rs
crates/wf-datagen/src/oracle/: mod.rs  tests.rs
crates/wf-datagen/src/output/: arrow_ipc.rs  jsonl.rs  mod.rs
crates/wf-datagen/src/validate/: gen_compat.rs  mod.rs  oracle.rs  stream_rule.rs  tests.rs
crates/wf-datagen/src/validate/tests/: inject.rs  mod.rs  oracle.rs  stream.rs
crates/wf-datagen/src/verify/: matching.rs  mod.rs  tests.rs  types.rs
crates/wf-datagen/src/wfg_parser/: mod.rs  oracle.rs  primitives.rs  stream.rs  tests.rs
crates/wf-datagen/src/wsc_parser/: mod.rs  primitives.rs  tests.rs
crates/wf-engine/: Cargo.toml
crates/wf-engine/src/: main.rs
crates/wf-lang/: Cargo.toml
crates/wf-lang/src/: ast.rs  explain.rs  lib.rs  parse_utils.rs  plan.rs  preprocess.rs  schema.rs
crates/wf-proj/: Cargo.toml
crates/wf-proj/src/: cmd_explain.rs  cmd_fmt.rs  cmd_lint.rs  cmd_replay.rs  cmd_test.rs  lib.rs  main.rs
crates/wf-proj/tests/: replay_e2e.rs
crates/wf-runtime/: Cargo.toml
crates/wf-runtime/src/: alert_task.rs  engine_task.rs  error.rs  evictor_task.rs  lib.rs  lifecycle.rs  log_macros.rs  metrics.rs  receiver.rs  scheduler.rs  schema_bridge.rs  sink_build.rs  tracing_init.rs
crates/wf-runtime/src/engine_task/: mod.rs  rule_task.rs  task_types.rs  tests.rs  window_lookup.rs
crates/wf-runtime/src/lifecycle/: bootstrap.rs  compile.rs  mod.rs  signal.rs  spawn.rs  types.rs
crates/wf-runtime/src/sink_factory/: file.rs
crates/wf-runtime/tests/: e2e_datagen.rs  e2e_mvp.rs
crates/wfgen/: Cargo.toml
crates/wfgen/src/: cmd_bench.rs  cmd_gen.rs  cmd_lint.rs  cmd_send.rs  cmd_verify.rs  lib.rs  main.rs  tcp_send.rs  wfg_ast.rs
crates/wfgen/src/datagen/: field_gen.rs  mod.rs  stream_gen.rs
crates/wfgen/src/datagen/inject_gen/: dispatch.rs  extract.rs  helpers.rs  hit.rs  mod.rs  non_hit.rs  structures.rs
crates/wfgen/src/datagen/tests/: compat.rs  event.rs  fault.rs  inject.rs  mod.rs
crates/wfgen/src/oracle/: mod.rs  tests.rs
crates/wfgen/src/output/: arrow_ipc.rs  jsonl.rs
crates/wfgen/src/validate/: inject.rs  mod.rs  scenario.rs  stream_schema.rs  syntax.rs
crates/wfgen/src/validate/tests/: field.rs  mod.rs  oracle.rs  syntax.rs
crates/wfgen/src/verify/: mod.rs  tests.rs  types.rs
crates/wfgen/src/wfg_parser/: faults.rs  inject.rs  mod.rs  primitives.rs  scenario.rs  stream.rs  syntax.rs  tests.rs
crates/wfl/: Cargo.toml
crates/wfl/src/: cmd_explain.rs  cmd_fmt.rs  cmd_lint.rs  cmd_replay.rs  cmd_replay_verify.rs  cmd_test.rs  lib.rs  main.rs
crates/wfl/tests/: replay_e2e.rs
docs/: learning-path.md  user-guide.md
docs/design/: architecture.md  cur_task.md  error-handling.md  logging-spec.md  reviewed.md  runtime-metrics-design.md  warp-fusion.md  wf-execution-plan.md  wfg-design.md  wfl-desion.md  wfl-dsl-comparison.md  wp-motor-error-analysis.md
docs/notes/: concurrent-architecture.md  human-ai-programming.md
examples/: README.md  brute_force.wfl  fusion.toml  wfusion.toml
examples/alerts/: all.jsonl
examples/avg/: README.md
examples/avg/data/: dns_events.ndjson
examples/avg/rules/: dns_tunnel.wfl
examples/close_modes/: README.md
examples/conv/: README.md
examples/count/: README.md
examples/distinct/: README.md
examples/functions/: README.md
examples/multi_step/: README.md
examples/pipeline/: README.md
examples/rules/: brute_force.wfl
examples/scenarios/: brute_force.wfg
examples/schemas/: security.wfs
examples/sinks/: README.md  defaults.toml
examples/sum/: README.md
examples/wfl/: contracts.wfl
tools/oml-tools/: Cargo.toml
tools/zed-warplabs/: extension.toml
(+141 files in other folders)
