[workspace]
members = ["crates/*"]
exclude = ["tools/tree-sitter-oml", "tools/tree-sitter-wfs", "tools/oml-tools", "tools/wplabs-lsp", "tools/zed-warplabs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
winnow = "0.7"
