[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
winnow = "0.7"
wp-connector-api =  "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
orion-error = { version = "0.6", default-features = false, features = ["tracing"] }
derive_more = { version = "2.1", features = ["from"] }
thiserror = "2.0"
