[package]
name = "wf-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "wf_config"

[dependencies]
wf-lang = { path = "../wf-lang" }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
glob = "0.3"
wp-connector-api = { workspace = true }
serde_json = "1.0"
wildmatch = "2"

[dev-dependencies]
