[package]
name = "wf-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "wf_core"

[dependencies]
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
arrow = { version = "54", default-features = false, features = ["ipc"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
arrow = { version = "54", default-features = false, features = ["ipc"] }
