[package]
name = "wf-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "wf_core"

[dependencies]
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
wp-connector-api = { workspace = true }
arrow = { version = "54", default-features = false, features = ["ipc"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
log = "0.4"
orion-error = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
regex = "1"
chrono = "0.4"

[dev-dependencies]
arrow = { version = "54", default-features = false, features = ["ipc"] }
