[package]
name = "wf-datagen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "wf-datagen"
path = "src/main.rs"

[dependencies]
wf-lang = { path = "../wf-lang" }
winnow = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
