[package]
name = "wf-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "warp-fusion"
path = "src/main.rs"

[dependencies]
wf-config = { path = "../wf-config" }
wf-runtime = { path = "../wf-runtime" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
