[package]
name = "wf-proj"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "wf-proj"
path = "src/main.rs"

[dependencies]
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
