[package]
name = "wf-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "wf_runtime"

[dependencies]
wf-core = { path = "../wf-core" }
wf-config = { path = "../wf-config" }
wp-arrow = "0.1"
wf-lang = { path = "../wf-lang" }
arrow = { version = "54", default-features = false, features = ["ipc"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow.workspace = true
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
arrow = { version = "54", default-features = false, features = ["ipc"] }
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
tempfile = "3"
serde_json = "1.0"
tracing-subscriber = { workspace = true }
