[package]
name = "wfl"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "wfl"
path = "src/main.rs"

[lib]
name = "wfl"
path = "src/lib.rs"

[dependencies]
wf-config = { path = "../wf-config" }
wf-lang = { path = "../wf-lang" }
wf-core = { path = "../wf-core" }
wfgen = { path = "../wfgen" }
tree-sitter = "0.26"
tree-sitter-wfl = { git = "https://github.com/wp-labs/tree-sitter-wfl.git", branch = "main"}
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"
